# neural-meta-tracts

./: CMakeLists.txt  LICENSE  README.md
sources/: libraries.h.in
sources/MultiScale/include/: bundle.h  bvh.h  fiber.h  fuzzy.h  kdtree.h  metatract.h  metrique.h  priorityqueue.h  surface.h
sources/MultiScale/src/: bundle.cpp  bvh.cpp  fiber.cpp  fuzzy.cpp  kdtree.cpp  metatract.cpp  metrique.cpp  surface.cpp
sources/interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui  widgetopengl.cpp  widgetopengl.h
sources/opengl/: camera.cpp  camera.h  openglutils.cpp  openglutils.h
sources/opengl/shaders/: advancedShader.cont  advancedShader.eval  advancedShader.frag  advancedShader.vert  advancedShaderWireframe.frag  shader.frag  shader.vert  shaderSingleColor.frag  shaderSingleColor.vert  shaderSurface.frag  shaderSurface.vert
sources/scene/: fiber_helper.cpp  fiber_helper.h  scene.cpp  scene.h
